--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
 html {
   font-size: 18px;
 }
+
 html * {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   font-family: "Overpass", Arial, Helvetica, sans-serif;
@@ -12,6 +14,7 @@ body {
   color: #444;
   background: #f0f0f0;
 }
+
 main {
   display: block;
   width: 100%;
@@ -19,6 +22,7 @@ main {
   margin: 0 auto;
   padding: 1rem;
 }
+
 button {
   -webkit-appearance: none;
   border: 0;
@@ -26,21 +30,26 @@ button {
   color: white;
   font-size: 1rem;
 }
-#masthead, #colophon {
+
+#masthead,
+#colophon {
   background: black;
   color: white;
 }
+
 #masthead h1 {
   font-family: "Comfortaa", Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 1rem;
 }
+
 #nav-open {
   position: absolute;
   top: 0;
   right: 0;
   margin: 1rem;
 }
+
 #nav-modal {
   position: fixed;
   top: 0;
@@ -72,16 +81,24 @@ button {
   margin: 0;
   width: 100%;
   max-width: calc(960px + 2rem);
+  max-height: 100%;
+  overflow-y: auto;
   font-size: 0;
 }
 
 #nav-modal ul li {
   display: inline-block;
-  width: 33.33%;
+  width: 100%;
   padding: 1rem;
   font-size: 1rem;
   cursor: pointer;
   transition: box-shadow ease-in 300ms;
+}
+
+@media screen and (min-width: 900px) {
+  #nav-modal ul li {
+    width: 33.33%;
+  }
 }
 
 #nav-modal ul li:hover {
